--- a/03数据库/02try catch.html
+++ b/03数据库/02try catch.html
@@ -32,8 +32,8 @@
             * 不阻塞后面代码的执行
 
         两种可能：
-            * 没有出错 ：start->你成年啦->end
-            * 出错了：start->错误信息->end
+            * 没有出错 ：start->name->end
+            * 出错了：start->出错了->end
     */
 </script>
 
