--- a/03数据库/myapp/adminsystem/userinf.html
+++ b/03数据库/myapp/adminsystem/userinf.html
@@ -61,6 +61,7 @@
 							</table>
 						</div>
 					</div>
+					<input type="button" value="删除全部" id="delall">
 					<div class="dataTables_paginate fg-buttonset ui-buttonset fg-buttonset-multi ui-buttonset-multi paging_full_numbers"
 						id="DataTables_Table_0_paginate">
 						<a tabindex="0"
@@ -138,7 +139,16 @@
 			$('#pages a').eq(0).addClass('ui-state-disabled');
 		}
 
-
+		//删除全部
+		// $('#delall').on('click', () => {
+		// 	$.ajax({
+		// 		type : 'delete',
+		// 		url : '/users/delall',
+		// 		data : {
+		// 			uid : 
+		// 		}
+		// 	})
+		// });
 	</script>
 </body>
 
